<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.hoangduy.demoview.Register">

    <TextView
        android:id="@+id/tvtextlogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_register_tvTitle_height"
        android:background="@color/colorRegDark"
        android:paddingLeft="@dimen/activity_main_tv_padding"
        android:paddingTop="@dimen/activity_main_tv_padding"
        android:text="@string/activity_register_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/activity_main_tv_fontsize" />

    <EditText
        android:id="@+id/etemail"
        style="@style/activity_register_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtextlogo"
        android:layout_marginTop="@dimen/activity_register_edtEmail_margintop"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etusername"
        style="@style/activity_register_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etemail"
        android:layout_marginTop="@dimen/activity_register_margintop"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etpassword"
        style="@style/activity_register_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etusername"
        android:layout_marginTop="@dimen/activity_register_margintop"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/rdgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etpassword"
        android:layout_below="@+id/etpassword"
        android:layout_marginTop="@dimen/activity_register_margintop"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbmale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rdbfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvgender"
        style="@style/activity_register_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etpassword"
        android:layout_below="@+id/etpassword"
        android:layout_marginTop="@dimen/activity_register_margintop"
        android:text="@string/gender"
        android:textSize="@dimen/activity_main_tv_fontsize" />

    <Button
        android:id="@+id/btnsignup"
        style="@style/activity_register_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvgender"
        android:layout_marginTop="@dimen/activity_register_margintop"
        android:background="@color/colorButtonRegistration"
        android:text="@string/btnSignUp"
        android:textColor="@android:color/white" />

    <Switch
        android:id="@+id/swpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etpassword"
        android:layout_alignTop="@+id/etpassword" />

</RelativeLayout>
