<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Login">

    <TextView
        android:id="@+id/textlogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_tv_title_height"
        android:background="@color/colorTittle"
        android:paddingLeft="@dimen/activity_main_tv_padding"
        android:paddingTop="@dimen/activity_main_tv_padding"
        android:text="@string/activity_main_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/activity_main_tv_fontsize" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_below="@+id/textlogo"
        android:inputType="text"
        style="@style/activity_main_configView"
        android:layout_marginTop="@dimen/activity_main_tvUsername_marginTop"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/txtpassword"
        android:inputType="textPassword"
        style="@style/activity_main_configView"
        android:layout_below="@+id/txtusername"
        android:layout_marginTop="@dimen/activity_main_tvPassword_marginTop"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        style="@style/activity_main_configView"
        android:layout_marginTop="@dimen/activity_main_layout_marginTop"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgfb"
            style="@style/activity_main_imgLogin"
            android:src="@drawable/fbicon" />

        <ImageView
            style="@style/activity_main_imgLogin"
            android:src="@drawable/ggicon" />

        <ImageView
            style="@style/activity_main_imgLogin"
            android:src="@drawable/twicon" />
    </LinearLayout>

    <Button
        android:id="@+id/btnsignin"
        android:layout_below="@+id/linearlayout"
        style="@style/activity_main_configView"
        android:layout_marginTop="@dimen/activity_main_button_marginTop"
        android:background="@color/colorButtonLogin"
        android:text="@string/buttonText"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnsignin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_main_tvForgotpw_marginTop"
        android:text="@string/tvForgetpassword" />

    <ImageView
        android:id="@+id/imgreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_main_imgAdd_marginEnd"
        android:layout_marginTop="@dimen/activity_main_imgAdd_marginTop"
        android:src="@drawable/ic_add" />
</RelativeLayout>
