<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.hoangduy.demoview.Display">

    <TextView
        android:textSize="@dimen/activity_display_tv_fontsize"
        android:text="@string/email"
        android:id="@+id/txtemail"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/activity_display_marginleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/txtemail"
        android:textSize="@dimen/activity_display_tv_fontsize"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/activity_display_marginleft"
        android:text="@string/username"
        android:id="@+id/txtusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/txtusername"
        android:textSize="@dimen/activity_display_tv_fontsize"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/activity_display_marginleft"
        android:text="@string/password"
        android:id="@+id/txtpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/txtpassword"
        android:textSize="@dimen/activity_display_tv_fontsize"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/activity_display_marginleft"
        android:text="@string/gender"
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/email"
        android:layout_alignBottom="@+id/txtemail"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/username"
        android:layout_alignBottom="@+id/txtusername"
        android:layout_alignStart="@+id/email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/password"
        android:layout_alignTop="@+id/txtpassword"
        android:layout_alignStart="@+id/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/gend"
        android:layout_alignBottom="@+id/gender"
        android:layout_alignStart="@+id/username" />

</RelativeLayout>
